--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,14 +1,14 @@
 <section class="main-section">
     <h1>
         Welcome to
-        <small>HTMX + Handlebars</small>
+        <small>HTMX + Node</small>
     </h1>
     <p>This is the home page.</p>
     <button class="button button--primary"
         hx-get="/list"
         hx-target="this"
         hx-swap="outerHTML"
-        hx-confirm="Are you sure?"
+        hx-confirm="Are you sure to get company list?"
         hx-indicator="#addSpinner"
         hx-disabled-elt="this"
     >
