--- a/src/assets/admin/css/components/main.css
+++ b/src/assets/admin/css/components/main.css
@@ -1,8 +1,9 @@
 .main {
     display: grid;
     grid-template-columns: subgrid;
-    grid-template-rows: var(--size-128) 1fr;
+    grid-template-rows: 140px 1fr;
     grid-column: full;
+    padding-inline: clamp(1rem, 5vw, 4rem);
 
     &.main--body {
         grid-column: body;
