--- a/src/views/partials/admin/header.hbs
+++ b/src/views/partials/admin/header.hbs
@@ -1,5 +1,32 @@
 <header class="admin-header">
-    <div class="header-container">
-        <h2>Products</h2>
+    <div class="start">
+        <h2>{{title}}</h2>
+        <ul class="breadcrumbs">
+            <li>
+                <div class="breadcrumb">
+                    <svg viewBox="0 0 24 24" width="15" height="15">
+                        <path fill="currentColor"
+                            d="M19,24H5c-2.757,0-5-2.243-5-5V9.724c0-1.665,.824-3.215,2.204-4.145L9.203,.855c1.699-1.146,3.895-1.146,5.594,0l7,4.724c1.379,.93,2.203,2.479,2.203,4.145v9.276c0,2.757-2.243,5-5,5Z" />
+                    </svg>
+                </div>
+            </li>
+            <li>/</li>
+            <li>
+                <div class="breadcrumb">
+                    {{title}}
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="end">
+        <div class="date-time">
+            <time datetime="2018-07-07">Febuary 25, 2025</time>
+            <div class="icon">
+                <svg viewBox="0 0 24 24" width="16" height="16">
+                    <path fill="currentColor"
+                        d="m8,12h-2c-1.103,0-2,.897-2,2v2c0,1.103.897,2,2,2h2c1.103,0,2-.897,2-2v-2c0-1.103-.897-2-2-2Zm-2,4v-2h2v2s-2,0-2,0ZM19,2h-1v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-8v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-1C2.243,2,0,4.243,0,7v12c0,2.757,2.243,5,5,5h14c2.757,0,5-2.243,5-5V7c0-2.757-2.243-5-5-5Zm-14,2h14c1.654,0,3,1.346,3,3v1H2v-1c0-1.654,1.346-3,3-3Zm14,18H5c-1.654,0-3-1.346-3-3v-9h20v9c0,1.654-1.346,3-3,3Z" />
+                </svg>
+            </div>
+        </div>
     </div>
 </header>
